crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__pre_py314_runtime-string-union_TC010_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC010 Invalid string member in `X | Y`-style union type
 --> TC010_2.py:4:4
  |
4 | x: "int" | str  # TC010
  |    ^^^^^
5 | x: ("int" | str) | "bool"  # TC010
  |

TC010 Invalid string member in `X | Y`-style union type
 --> TC010_2.py:5:5
  |
4 | x: "int" | str  # TC010
5 | x: ("int" | str) | "bool"  # TC010
  |     ^^^^^

TC010 Invalid string member in `X | Y`-style union type
 --> TC010_2.py:5:20
  |
4 | x: "int" | str  # TC010
5 | x: ("int" | str) | "bool"  # TC010
  |                    ^^^^^^

TC010 Invalid string member in `X | Y`-style union type
  --> TC010_2.py:12:20
   |
12 | z: list[str, str | "int"] = []  # TC010
   |                    ^^^^^
13 |
14 | type A = Value["int" | str]  # OK
   |

TC010 Invalid string member in `X | Y`-style union type
  --> TC010_2.py:16:30
   |
14 | type A = Value["int" | str]  # OK
15 |
16 | OldS = TypeVar('OldS', int | 'str', str)  # TC010
   |                              ^^^^^
17 |
18 | x: ("int"  # TC010 (unsafe fix)
   |

TC010 Invalid string member in `X | Y`-style union type
  --> TC010_2.py:18:5
   |
16 |   OldS = TypeVar('OldS', int | 'str', str)  # TC010
17 |
18 |   x: ("int"  # TC010 (unsafe fix)
   |  _____^
19 | |     " | str" | None)
   | |____________^
20 |
21 |   OldT = TypeVar("OldT", ("int"  # TC010 (unsafe fix)
   |

TC010 Invalid string member in `X | Y`-style union type
  --> TC010_2.py:21:25
   |
19 |       " | str" | None)
20 |
21 |   OldT = TypeVar("OldT", ("int"  # TC010 (unsafe fix)
   |  _________________________^
22 | |                         " | str" | None))
   | |________________________________^
