crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__quote_annotations_runtime-import-in-type-checking-block_quote.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
quote.py:57:28: TC004 [*] Quote references to `pandas.DataFrame`. Import is in a type-checking block.
   |
56 |     if TYPE_CHECKING:
57 |         from pandas import DataFrame
   |                            ^^^^^^^^^ TC004
58 | 
59 |     def func(value: DataFrame):
   |
   = help: Quote references

ℹ Unsafe fix
56 56 |     if TYPE_CHECKING:
57 57 |         from pandas import DataFrame
58 58 | 
59    |-    def func(value: DataFrame):
   59 |+    def func(value: "DataFrame"):
60 60 |         ...
61 61 | 
62 62 |
