crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__quote_casts_runtime-import-in-type-checking-block_quote4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
quote4.py:12:28: TC004 [*] Move import `pandas.DataFrame` out of type-checking block. Import is used for more than type hinting.
   |
11 |     if TYPE_CHECKING:
12 |         from pandas import DataFrame
   |                            ^^^^^^^^^ TC004
13 | 
14 |     def baz() -> DataFrame[int]:
   |
   = help: Move out of type-checking block

ℹ Unsafe fix
   1  |+from pandas import DataFrame
1  2  | def f():
2  3  |     from pandas import DataFrame
3  4  | 
--------------------------------------------------------------------------------
9  10 |     from typing import TYPE_CHECKING
10 11 | 
11 12 |     if TYPE_CHECKING:
12    |-        from pandas import DataFrame
   13 |+        pass
13 14 | 
14 15 |     def baz() -> DataFrame[int]:
15 16 |         ...

quote4.py:22:28: TC004 [*] Move import `pandas.DataFrame` out of type-checking block. Import is used for more than type hinting.
   |
21 |     if TYPE_CHECKING:
22 |         from pandas import DataFrame
   |                            ^^^^^^^^^ TC004
23 | 
24 |     x: TypeAlias = DataFrame | None
   |
   = help: Move out of type-checking block

ℹ Unsafe fix
   1  |+from pandas import DataFrame
1  2  | def f():
2  3  |     from pandas import DataFrame
3  4  | 
--------------------------------------------------------------------------------
19 20 |     from typing import TypeAlias, TYPE_CHECKING
20 21 | 
21 22 |     if TYPE_CHECKING:
22    |-        from pandas import DataFrame
   23 |+        pass
23 24 | 
24 25 |     x: TypeAlias = DataFrame | None
25 26 | 

quote4.py:41:28: TC004 [*] Quote references to `pandas.DataFrame`. Import is in a type-checking block.
   |
40 |     if TYPE_CHECKING:
41 |         from pandas import DataFrame
   |                            ^^^^^^^^^ TC004
42 | 
43 |     foo = cast(DataFrame, get_foo())
   |
   = help: Quote references

ℹ Unsafe fix
40 40 |     if TYPE_CHECKING:
41 41 |         from pandas import DataFrame
42 42 | 
43    |-    foo = cast(DataFrame, get_foo())
   43 |+    foo = cast("DataFrame", get_foo())
44 44 | 
45 45 | 
46 46 | def f():

quote4.py:60:28: TC004 [*] Move import `pandas.DataFrame` out of type-checking block. Import is used for more than type hinting.
   |
59 |     if TYPE_CHECKING:
60 |         from pandas import DataFrame
   |                            ^^^^^^^^^ TC004
61 | 
62 |     x: TypeAlias = DataFrame | dict
   |
   = help: Move out of type-checking block

ℹ Unsafe fix
   1  |+from pandas import DataFrame
1  2  | def f():
2  3  |     from pandas import DataFrame
3  4  | 
--------------------------------------------------------------------------------
57 58 |     from typing import TypeAlias, TYPE_CHECKING
58 59 | 
59 60 |     if TYPE_CHECKING:
60    |-        from pandas import DataFrame
   61 |+        pass
61 62 | 
62 63 |     x: TypeAlias = DataFrame | dict
63 64 |
